feat(java 21)!: upgrade java version to 21